[package]
name = "healthdog"
version = "0.1.0"
authors = ["Matt Briggs <brigmatt@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2018"
publish = false
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[[bin]]
name = "healthdog"
path = "src/main.rs"

[dependencies]
bottlerocket-release = { version = "0.1.0", path = "../bottlerocket-release"}
lazy_static = "1.4.0"
regex = "1.3.9"
reqwest = { version = "0.10.1", default-features = false, features = ["blocking", "rustls"] }
serde = { version = "1.0.100", features = ["derive"] }
shell-words = "0.1.0"
snafu = { version = "0.6" }
toml = "0.5.1"
url = "2.1.1"

[build-dependencies]
cargo-readme = "3.1"

[dev-dependencies]
httptest = "0.13.1"
tempfile = { version = "3.1.0", default-features = false }
