[package]
name = "logdog"
version = "0.1.0"
authors = ["Matt Briggs <brigmatt@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2018"
publish = false

[dependencies]
flate2 = "1.0"
snafu = "0.6"
tar = "0.4"

[build-dependencies]
cargo-readme = "3.1"

[dev-dependencies]
uuid = { version = "0.8.1", features = [ "v4" ] }